<resources>
    <string name="app_name">微信</string>
    <string name="title">微信(Fake)</string>
    <string name="group_chat">发起群聊</string>
    <string name="add_friend">添加朋友</string>
    <string name="scan">扫一扫</string>
    <string name="pay">收付款</string>
    <string name="help">帮助与反馈</string>
    <string name="login_text">微信号/QQ/邮箱登录</string>
    <string name="reg_text">注册</string>
    <string name="login">登录</string>
    <string name="user_name">账号</string>
    <string name="user_passwd">密码</string>
    <string name="reg_name">昵称</string>
    <string name="reg_id">账号</string>
    <string name="register">用手机号登录</string>
    <string name="reg_passwd">密码</string>
    <string name="user_name_hint">请填写微信号/QQ号/邮箱</string>
    <string name="user_passwd_hint">请填写密码</string>
    <string name="phone_login">用手机号登录</string>
    <string name="bottom_login1">找回密码</string>
    <string name="bottom_login2">紧急冻结</string>
    <string name="bottom_login3">微信安全中心</string>
    <string name="bottom1">微信</string>
    <string name="bottom2">通讯录</string>
    <string name="bottom3">发现</string>
    <string name="bottom4">我</string>
    <string name="login_name">刘启维</string>
    <string name="wechat_num">微信号 : wxid_49650896...</string>
    <string name="circle_time">4小时前</string>
    <string name="paytitle">支付</string>
    <string name="purse">钱包</string>
    <string name="money">$1234567890</string>
    <string name="recivemoney">收付款</string>
    <string name="service">腾讯服务</string>
    <string name="booking">订阅号消息(Fake)</string>
    <string name="otherservice">第三方服务</string>
    <string name="gongqingtuan">广东共青团</string>
    <string name="booking_num">常读的订阅号</string>
    <string name="c">C</string>
    <string name="k">K</string>
    <string name="p">P</string>
    <string name="t">T</string>
</resources>
