<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/list_background"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:layout_width="match_parent"
        android:layout_height="73dp">
        <TextView
            android:id="@+id/top_text"
            android:textColor="@color/titleText"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="16dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
          <LinearLayout
              android:gravity="right|bottom"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <ImageButton
                  android:layout_marginBottom="16dp"
                  android:layout_marginRight="40dp"
                  android:id="@+id/search_icon"
                  android:gravity="center_vertical"
                  android:background="@drawable/search3"
                  android:layout_width="20dp"
                  android:layout_height="20dp" />
              <ImageButton
                  android:layout_marginBottom="16dp"
                  android:layout_marginRight="20dp"
                  android:id="@+id/plus_icon"
                  android:gravity="center_vertical"
                  android:background="@drawable/plus2"
                  android:layout_width="20dp"
                  android:layout_height="20dp" />
          </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <android.support.v4.view.ViewPager
       android:layout_below="@+id/toolbar"
        android:layout_above="@+id/bottom"
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:background="@color/bottom"
        android:layout_width="match_parent"
        android:layout_height="58dp">
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:id="@+id/wechat_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/wechat_icon"
                android:layout_width="37dp"
                android:layout_height="36dp"
                android:background="@drawable/wechat_press"
                />
            <TextView
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="1dp"
                android:id="@+id/wechat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/bottom1"
                android:textColor="@color/bottom_text_press"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:id="@+id/wechat_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/contact_icon"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:background="@drawable/contact_normal"
                />
            <TextView
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="3dp"
                android:id="@+id/contact_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom2"
                android:textColor="@color/titleText"
                android:textSize="11sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:id="@+id/wechat_discover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/discover_icon"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:background="@drawable/discover_normal"
                    />
            <TextView
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="3dp"
                android:id="@+id/discover_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom3"
                android:textColor="@color/titleText"
                android:textSize="11sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:id="@+id/wechat_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/mine_icon"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:background="@drawable/my_normal"
                />
            <TextView
                android:layout_marginBottom="3dp"
                android:id="@+id/mine_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom4"
                android:textColor="@color/titleText"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>